[package]
name = "art-gallery-pallet"
description = "Art Gallery module that implements `Art Gallery` trait."
license = "Apache-2.0"
version = "0.4.0-dev"
authors = ["Usetech"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
#pallet-atomic-swap = { version = "2.0.0", default-features = false }
#orml-traits = { version = "0.4.0-dev", default-features = false, path = "../traits" }
orml-nft = { version = "0.4.0-dev", default-features = false, path = "../nft" }

[dev-dependencies]
sp-core = { version = "2.0.0", default-features = false }
sp-io = { version = "2.0.0", default-features = false }

#clear_on_drop = { version = "0.2.4", features = ["no_cc"] }	# https://github.com/paritytech/substrate/issues/4179

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	#"pallet-atomic-swap/std",
	#"orml-traits/std",
	"orml-nft/std",
]
