[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }

pallet-aura = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-balances = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
frame-support = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-grandpa = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-randomness-collective-flip = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-sudo = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
frame-system = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-timestamp = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-transaction-payment = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
frame-executive = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28", default-features = false}
sp-consensus-aura = { version = "0.8.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-core = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28", default-features = false}
sp-offchain = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-runtime = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-session = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-std = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-transaction-pool = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
sp-version = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }

# orml-traits = { version = "0.4.0-dev", default-features = false, path = "../traits" }  
orml-nft = { version = "0.4.0-dev", default-features = false, path = "../nft" }
art-gallery-pallet = { version = "0.4.0-dev", default-features = false, path = "../art-gallery-pallet" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }
pallet-transaction-payment-rpc-runtime-api = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }

# Used for runtime benchmarking
frame-benchmarking = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28", optional = true }
frame-system-benchmarking = {  default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28", optional = true }
hex-literal = { version = "0.3.1", optional = true }


[build-dependencies]
substrate-wasm-builder = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.8.28" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"orml-nft/std",
	"art-gallery-pallet/std",
]
runtime-benchmarks = []
